--- a/src/index.html
+++ b/src/index.html
@@ -7,40 +7,9 @@
     <link rel="stylesheet" href="/style.css" />
     <title>Vite App</title>
   </head>
-
-  <body
-    class="m-0 flex min-h-screen min-w-[320px] place-items-center bg-[#ffffff] font-inter text-base font-normal text-[#213547] dark:bg-[#242424] dark:text-transparent-white"
-  >
-    <div
-      class="mx-auto flex max-w-[1280px] flex-col items-center justify-center p-8"
-    >
-      <a href="https://vitejs.dev" target="_blank" rel="noopener noreferrer">
-        <img
-          src="./vite.svg"
-          class="h-24 p-5 will-change-[filter] hover:drop-shadow-logo"
-          alt="Vite logo"
-        />
-      </a>
-      <a href="https://tailwindcss.com/" target="_blank" rel="noopener noreferrer">
-        <img
-          src="./tailwindcss.svg"
-          class="h-18 w-auto p-5 will-change-[filter] hover:drop-shadow-logo-tw"
-          alt="TailwindCSS logo"
-        />
-      </a>
-      <h1
-        class="my-12 bg-gradient-to-r from-green-400 to-blue-500 bg-clip-text p-4 text-6xl text-transparent"
-      >
-        Hello Vite!
-      </h1>
-      <div class="card">
-        <button id="counter" type="button"></button>
-      </div>
-      <div class="text-gray-600 flex flex-row gap-3 items-center">
-        Built with love by
-        <a href="https://kometo.co/?utm_source=vite-tailwind-nojs-starter" target="_blank" rel="noopener noreferrer"
-          title="KometoLabs" class="shadow-sm"><img class="inline" src="/img/kometo.png" alt="KometoLabs logo" /></a>
-      </div>
+  <body>
+    <div class="bg-yellow-500 text-center text-6xl/[150px] mx-96 rounded-full">
+      <h1>poopy fart blog post</h1>
     </div>
   </body>
 </html>
