--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,10 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div class="bg-yellow-500 text-center text-6xl/[150px] mx-96 rounded-full">
-      <h1>poopy fart blog post</h1>
+    <div class="flex flex-row">
+      <div class="bg-yellow-500 text-center text-6xl/[150px] mx-96 rounded-full basis-1/2">
+        <h1>poopy fart blog post</h1>
+      </div>
     </div>
   </body>
 </html>
