--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,19 @@
     <link rel="stylesheet" href="/style.css" />
     <title>Vite App</title>
   </head>
-  <body>
-    <div class="flex flex-row">
-      <div class="bg-yellow-500 text-center text-6xl/[150px] mx-96 rounded-full basis-1/2">
-        <h1>poopy fart blog post</h1>
+  <body class="bg-[#a9aaec]">
+    <div class="bg-[#a9d6b4] text-center text-6xl/[150px] mx-96 rounded-full border-8 border-[#fdf4e1] text-[#fdf4e1] font-bold">
+      <h1>3 things i did this summer</h1>
+    </div>
+    <div class="flex flex-row justify-evenly">
+      <div class="bg-[#a9d6b4] text-center text-6xl/[150px] mx-24 my-24 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto ">
+        <h2>swimming</h2>
+      </div>
+      <div class="bg-[#a9d6b4] text-center text-6xl/[150px] mx-24 my-24 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto  ">
+        <h2>beating</h2>
+      </div>
+      <div class="bg-[#a9d6b4] text-center text-6xl/[150px] mx-24 my-24 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto ">
+        <h2>beating</h2>
       </div>
     </div>
   </body>
