--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,24 @@
     <title>Vite App</title>
   </head>
   <body class="bg-[#a9aaec]">
-    <div class="bg-[#a9d6b4] text-center text-6xl/[150px] mx-96 rounded-full border-8 border-[#fdf4e1] text-[#fdf4e1] font-bold">
+    <div class="bg-[#a9d6b4] text-center text-6xl/[150px] mx-96 my-6 rounded-full border-8 border-[#fdf4e1] text-[#fdf4e1] font-bold">
       <h1>3 things i did this summer</h1>
     </div>
     <div class="flex flex-row justify-evenly">
-      <div class="bg-[#a9d6b4] text-center text-6xl/[150px] mx-24 my-24 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto ">
-        <h2>swimming</h2>
+      <div class="bg-[#a9d6b4] text-center text-5xl/[150px] mx-6 my-14 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto transition ease-in-out hover:-translate-y-3 max-w-lg">
+        <h3>gaming!!!</h3>
+        <img src="../src/poopyfarrt.png" alt="nmnmn" class="w-full">
+        <h5 class="text-xl my-6 ">LIKE WHATS APP DANGER</h5>
       </div>
-      <div class="bg-[#a9d6b4] text-center text-6xl/[150px] mx-24 my-24 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto  ">
-        <h2>beating</h2>
+      <div class="bg-[#a9d6b4] text-center text-5xl/[150px] mx-6 my-14 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto transition ease-in-out hover:-translate-y-3 max-w-lg">
+        <h3>california</h3>
+        <img src="" alt="">
+        <h5 class="text-xl my-6 ">LIKE WHATS APP DANGER</h5>
       </div>
-      <div class="bg-[#a9d6b4] text-center text-6xl/[150px] mx-24 my-24 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto ">
-        <h2>beating</h2>
+      <div class="bg-[#a9d6b4] text-center text-5xl/[150px] mx-6 my-14 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto transition ease-in-out hover:-translate-y-3 max-w-lg">
+        <h3>volleyball</h3>
+        <img src="" alt="">
+        <h5 class="text-xl my-6 ">LIKE WHATS APP DANGER</h5>
       </div>
     </div>
   </body>
