--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
     <div class="flex flex-row justify-evenly">
       <div class="bg-[#a9d6b4] text-center text-5xl/[150px] mx-6 my-14 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto transition ease-in-out hover:-translate-y-3 max-w-lg">
         <h3>gaming!!!</h3>
-        <img src="../src/poopyfarrt.png" alt="nmnmn" class="w-full">
-        <h5 class="text-xl my-6 ">LIKE WHATS APP DANGER</h5>
+        <img src="https://cdn.discordapp.com/attachments/1147403348627177532/1152745927728177202/image.png" alt="nmnmn" class="w-half mx-auto">
+        <h5 class="text-xl my-6 mx-6 text-[#33d0b9] ">i wasted most of my summer playing computer games like raft and fort nite ( i love fortnite so mucuh). i played with yan sharma and some of my other friends and we had a grand old time</h5>
       </div>
       <div class="bg-[#a9d6b4] text-center text-5xl/[150px] mx-6 my-14 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto transition ease-in-out hover:-translate-y-3 max-w-lg">
         <h3>california</h3>
