--- a/src/index.html
+++ b/src/index.html
@@ -12,20 +12,26 @@
       <h1>3 things i did this summer</h1>
     </div>
     <div class="flex flex-row justify-evenly">
-      <div class="bg-[#a9d6b4] text-center text-5xl/[150px] mx-6 my-14 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto transition ease-in-out hover:-translate-y-3 max-w-lg">
+      <div class="bg-[#a9d6b4] text-center text-5xl/[150px] mx-6 my-14 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto transition ease-in-out hover:-translate-y-3 max-w-lg font-bold">
         <h3>gaming!!!</h3>
-        <img src="https://cdn.discordapp.com/attachments/1147403348627177532/1152745927728177202/image.png" alt="nmnmn" class="w-half mx-auto">
-        <h5 class="text-xl my-6 mx-6 text-[#33d0b9] ">i wasted most of my summer playing computer games like raft and fort nite ( i love fortnite so mucuh). i played with yan sharma and some of my other friends and we had a grand old time</h5>
+        <img src="https://cdn.discordapp.com/attachments/1147403348627177532/1152745927728177202/image.png" alt="nmnmn" class="mx-auto border-8 border-[#a9aaec] rounded-3xl">
+        <div class="bg-[#fdf4e1] text-[#a9aaec] mx-6 my-6 border-8 border-[#a9aaec] rounded-3xl">
+          <h5 class="text-xl my-6 mx-6 ">i wasted most of my summer playing computer games like raft and fort nite ( i love fortnite so mucuh). i played with yan sharma and some of my other friends and we had a grand old time</h5>
+        </div>
       </div>
-      <div class="bg-[#a9d6b4] text-center text-5xl/[150px] mx-6 my-14 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto transition ease-in-out hover:-translate-y-3 max-w-lg">
+      <div class="bg-[#a9d6b4] text-center text-5xl/[150px] mx-6 my-14 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto transition ease-in-out hover:-translate-y-3 max-w-lg font-bold">
         <h3>california</h3>
-        <img src="" alt="">
-        <h5 class="text-xl my-6 ">LIKE WHATS APP DANGER</h5>
+        <img src="https://cdn.discordapp.com/attachments/710497569347731526/1153052360042623098/IMG_4465.jpg" alt="" class="mx-auto h-1/3 border-8 rounded-3xl border-[#a9aaec]">
+        <div class="bg-[#fdf4e1] text-[#a9aaec] mx-6 my-6  border-8 border-[#a9aaec] rounded-3xl">
+          <h5 class="text-xl my-6 mx-6 ">and we had a grand old time</h5>
+        </div>
       </div>
-      <div class="bg-[#a9d6b4] text-center text-5xl/[150px] mx-6 my-14 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto transition ease-in-out hover:-translate-y-3 max-w-lg">
+      <div class="bg-[#a9d6b4] text-center text-5xl/[150px] mx-6 my-14 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto transition ease-in-out hover:-translate-y-3 max-w-lg font-bold">
         <h3>volleyball</h3>
         <img src="" alt="">
-        <h5 class="text-xl my-6 ">LIKE WHATS APP DANGER</h5>
+        <div class="bg-[#fdf4e1] text-[#a9aaec] mx-6 my-6 py-6 border-8 border-[#a9aaec] rounded-3xl">
+          <h5 class="text-xl my-6 mx-6 ">i wasted most of my summer playing computer games like raft and fort nite ( i love fortnite so mucuh). i played with yan sharma and some of my other friends and we had a grand old time</h5>
+        </div>
       </div>
     </div>
   </body>
