--- a/src/index.html
+++ b/src/index.html
@@ -12,25 +12,25 @@
       <h1>3 things i did this summer</h1>
     </div>
     <div class="flex flex-row justify-evenly">
-      <div class="bg-[#a9d6b4] text-center text-5xl/[150px] mx-6 my-14 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto transition ease-in-out hover:-translate-y-3 max-w-lg font-bold">
+      <div class="bg-[#a9d6b4] text-center text-5xl/[150px] mx-6 my-14 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto transition ease-in-out hover:-translate-y-3 max-w-lg font-bold h-fit">
         <h3>gaming!!!</h3>
         <img src="https://cdn.discordapp.com/attachments/1147403348627177532/1152745927728177202/image.png" alt="nmnmn" class="mx-auto border-8 border-[#a9aaec] rounded-3xl">
         <div class="bg-[#fdf4e1] text-[#a9aaec] mx-6 my-6 border-8 border-[#a9aaec] rounded-3xl">
           <h5 class="text-xl my-6 mx-6 ">i wasted most of my summer playing computer games like raft and fort nite ( i love fortnite so mucuh). i played with yan sharma and some of my other friends and we had a grand old time</h5>
         </div>
       </div>
-      <div class="bg-[#a9d6b4] text-center text-5xl/[150px] mx-6 my-14 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto transition ease-in-out hover:-translate-y-3 max-w-lg font-bold">
+      <div class="bg-[#a9d6b4] text-center text-5xl/[150px] mx-6 my-14 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto transition ease-in-out hover:-translate-y-3 max-w-lg font-bold h-fit">
         <h3>california</h3>
-        <img src="https://cdn.discordapp.com/attachments/710497569347731526/1153052360042623098/IMG_4465.jpg" alt="" class="mx-auto h-1/3 border-8 rounded-3xl border-[#a9aaec]">
+        <img src="https://cdn.discordapp.com/attachments/710497569347731526/1153052360042623098/IMG_4465.jpg" alt="" class="mx-auto h-1/5 border-8 rounded-3xl border-[#a9aaec]">
         <div class="bg-[#fdf4e1] text-[#a9aaec] mx-6 my-6  border-8 border-[#a9aaec] rounded-3xl">
-          <h5 class="text-xl my-6 mx-6 ">and we had a grand old time</h5>
+          <h5 class="text-xl my-6 mx-6 ">i went to cali for 10 days. i saw the hollywood sign, redwood trees, the golden gate bridge (which is too foggy to see), and the san diego zoo. and i went with my cousins</h5>
         </div>
       </div>
-      <div class="bg-[#a9d6b4] text-center text-5xl/[150px] mx-6 my-14 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto transition ease-in-out hover:-translate-y-3 max-w-lg font-bold">
+      <div class="bg-[#a9d6b4] text-center text-5xl/[150px] mx-6 my-14 rounded-3xl border-8 border-[#fdf4e1] text-[#fdf4e1] flex-auto transition ease-in-out hover:-translate-y-3 max-w-lg font-bold h-fit">
         <h3>volleyball</h3>
-        <img src="" alt="">
+        <img src="https://wp.dailybruin.com/images/2022/04/web.sp_.mvb_.wrap_.4.8.22.DR_.a.jpg" alt="" class="mx-auto h-1/5 border-8 rounded-3xl border-[#a9aaec]">
         <div class="bg-[#fdf4e1] text-[#a9aaec] mx-6 my-6 py-6 border-8 border-[#a9aaec] rounded-3xl">
-          <h5 class="text-xl my-6 mx-6 ">i wasted most of my summer playing computer games like raft and fort nite ( i love fortnite so mucuh). i played with yan sharma and some of my other friends and we had a grand old time</h5>
+          <h5 class="text-xl my-6 mx-6 ">i played a lot of volleyball this summer and i got much better. if you need a person for teacher-student volleyball game you can ask me cause im really good at volleyball now. at the very least i can spike it over the net unlike yan sharma</h5>
         </div>
       </div>
     </div>
