--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/style.css" />
     <title>Vite App</title>
   </head>
-  <body class="bg-[#a9aaec]">
+  <body class="bg-[#a9aaec] font-mono">
     <div class="bg-[#a9d6b4] text-center text-6xl/[150px] mx-96 my-6 rounded-full border-8 border-[#fdf4e1] text-[#fdf4e1] font-bold">
       <h1>3 things i did this summer</h1>
     </div>
